test/Fail/Issue2442-conflicting.err
Issue2442-conflicting.agda:1,1-46: error: [SafeFlagPragma]
Cannot set OPTIONS pragma --no-termination-check with safe flag.
